elasticsearch_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  namespace: $(ns)
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /es
spec:
 rules:
 - host: es.$(base_url)
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
          name: $(es_svc)
          port:
           number: 9200
